--- a/webapp/src/main/resources/application.properties
+++ b/webapp/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.jackson.serialization.write-dates-as-timestamps=false
 
 mybatis.mapper-locations=classpath:mybatis-mapper/*.xml
 
-spring.profiles.active=aws
+#spring.profiles.active=aws
 
 csye6225.save.file.type=local
 
