--- a/webapp/src/main/resources/application-aws.properties
+++ b/webapp/src/main/resources/application-aws.properties
@@ -12,7 +12,7 @@ csye6225.aws.bucket.name=csye6225-spring2019-xiaox.me.com
 
 csye6225.aws.url.suffix=.s3.amazonaws.com
 
-csye6225.file.folder=/image
+csye6225.file.folder=image
 
 csye6225.save.file.type=aws
 
