add create DynamoDB method

--- a/infrastructure/aws/cloudformation/csye6225-cf-application.yaml
+++ b/infrastructure/aws/cloudformation/csye6225-cf-application.yaml
@@ -1,95 +1,41 @@
-AWSTemplateFormatVersion: 2010-09-09
-Resources:
-  # Create VPC:
-  csye6225VPC:
-    Type: AWS::EC2::VPC
-    Properties:
-      CidrBlock: 10.0.0.0/16
-      EnableDnsSupport: false
-      EnableDnsHostnames: false
-      Tags:
-      - Key: Name
-        Value:  !Join ['', [!Ref "AWS::StackName", "-csye6225","-vpc" ]]
+##DynamoDB
+AWSTemplateFormatVersion: "2010-09-09"
+Resources: 
+  csye6225: 
+    Type: AWS::DynamoDB::Table
+    Properties: 
+      AttributeDefinitions: 
+        - 
+          AttributeName: "id"
+          AttributeType: "S"
+      KeySchema: 
+        - 
+          AttributeName: "id"
+          KeyType: "HASH"
 
-  # Create Subnet:
-  PublicSubnetA:
-    Type: AWS::EC2::Subnet
-    Properties:
-      VpcId: !Ref csye6225VPC
-      CidrBlock: 10.0.1.0/24
-      AvailabilityZone: !Select [ 0, !GetAZs ]    # Get the first AZ in the list
-      Tags:
-      - Key: Name
-        Value: !Sub ${AWS::StackName}-Public-A
+      ProvisionedThroughput: 
+        ReadCapacityUnits: "5"
+        WriteCapacityUnits: "5"
+      TableName: "csye6225"
 
-  PublicSubnetB:
-    Type: AWS::EC2::Subnet
-    Properties:
-      VpcId: !Ref csye6225VPC
-      CidrBlock: 10.0.2.0/24
-      AvailabilityZone: !Select [ 1, !GetAZs ]    # Get the second AZ in the list
-      Tags:
-      - Key: Name
-        Value: !Sub ${AWS::StackName}-Public-B
-
-  PublicSubnetC:
-    Type: AWS::EC2::Subnet
-    Properties:
-      VpcId: !Ref csye6225VPC
-      CidrBlock: 10.0.3.0/24
-      AvailabilityZone: !Select [ 2, !GetAZs ]    # Get the third AZ in the list
-      Tags:
-      - Key: Name
-        Value: !Sub ${AWS::StackName}-Public-C
-
-  # InternetGateway and attachment
-  csye6225InternetGateway:
-    Type: AWS::EC2::InternetGateway
-    DependsOn: csye6225VPC
-    Properties:
-      Tags:
-      - Key: Name
-        Value: !Sub ${AWS::StackName}-csye6225-ig
-
-  AttachGateway:
-    Type: AWS::EC2::VPCGatewayAttachment
-    # Notice how you can't attach an IGW to a VPC unless both are created:
-    Properties:
-      VpcId: !Ref csye6225VPC
-      InternetGatewayId: !Ref csye6225InternetGateway
-
-  #RouteTable and Route
-  csye6225PublicRouteTable:
-    Type: AWS::EC2::RouteTable
-    Properties:
-      VpcId: !Ref csye6225VPC
-      Tags:
-      - Key: Name
-        Value: !Sub ${AWS::StackName}-csye6225-rt
-
-  PublicRoute1:   # Public route table has direct routing to IGW:
-    Type: AWS::EC2::Route
-    DependsOn: AttachGateway
-    Properties:
-      RouteTableId: !Ref csye6225PublicRouteTable
-      DestinationCidrBlock: 0.0.0.0/0
-      GatewayId: !Ref csye6225InternetGateway
-
-  # Attach the public subnets to public route tables,
-  PublicSubnetARouteTableAssociation:
-    Type: AWS::EC2::SubnetRouteTableAssociation
-    Properties:
-      SubnetId: !Ref PublicSubnetA
-      RouteTableId: !Ref csye6225PublicRouteTable
-
-  PublicSubnetBRouteTableAssociation:
-    Type: AWS::EC2::SubnetRouteTableAssociation
-    Properties:
-      SubnetId: !Ref PublicSubnetB
-      RouteTableId: !Ref csye6225PublicRouteTable
-
-  PublicSubnetCRouteTableAssociation:
-    Type: AWS::EC2::SubnetRouteTableAssociation
-    Properties:
-      SubnetId: !Ref PublicSubnetC
-      RouteTableId: !Ref csye6225PublicRouteTable
+##RDS Instance
+# csye6225:
+#   Type: AWS::RDS::DBInstance
+#   Properties: 
+#     Engine: "MySQL"
+#     DBInstanceClass: 
+#       Ref: "db.t2.medium"
+#     MultiAZ:
+#       Ref: "false"
+#     DBInstanceIdentifier:
+#       Ref: "csye6225-spring2019"
+#     MasterUsername: 
+#       Ref: "csye6225master"
+#     MasterUserPassword: 
+#       Ref: "csye6225password"
+#     PubliclyAccessible:
+#       Ref: "true"
+#     DBSubnetGroupName:
+#       Ref: "Subnet for RDS instances" #TODO
+#     DBName: 
+#       Ref: "csye6225"
