--- a/infrastructure/aws/cloudformation/csye6225-cf-networking.yaml
+++ b/infrastructure/aws/cloudformation/csye6225-cf-networking.yaml
@@ -93,3 +93,16 @@ Resources:
     Properties:
       SubnetId: !Ref PublicSubnetC
       RouteTableId: !Ref csye6225PublicRouteTable
+
+Output:
+  VPC: 
+      Description: A reference to the created VPC
+      Value: !Ref VPC
+
+  PublicSubnets:
+      Description: A list of the public subnets
+      Value: !Join [ ",", [ !Ref PublicSubnet1, !Ref PublicSubnet2 ]]
+      
+  PrivateSubnets:
+      Description: A list of the private subnets
+      Value: !Join [ ",", [ !Ref PrivateSubnet1, !Ref PrivateSubnet2 ]]
