--- a/infrastructure/aws/cloudformation/csye6225-cf-networking.yaml
+++ b/infrastructure/aws/cloudformation/csye6225-cf-networking.yaml
@@ -99,10 +99,14 @@ Output:
       Description: A reference to the created VPC
       Value: !Ref VPC
 
-  PublicSubnets:
-      Description: A list of the public subnets
-      Value: !Join [ ",", [ !Ref PublicSubnet1, !Ref PublicSubnet2 ]]
-      
-  PrivateSubnets:
-      Description: A list of the private subnets
-      Value: !Join [ ",", [ !Ref PrivateSubnet1, !Ref PrivateSubnet2 ]]
+  PublicSubnetA:
+      Description: Subnet A
+      Value: !Sub ${AWS::StackName}-Public-A
+
+  PublicSubnetB:
+      Description: Subnet B
+      Value: !Sub ${AWS::StackName}-Public-B
+
+  PublicSubnetC:
+      Description: Subnet C
+      Value: !Sub ${AWS::StackName}-Public-C   
