--- a/infrastructure/aws/cloudformation/csye6225-cf-application.yaml
+++ b/infrastructure/aws/cloudformation/csye6225-cf-application.yaml
@@ -50,19 +50,20 @@ Resources:
   #           VolumeSize: 20
   #     ImageId: ami-9887c6e7
 
-  DBSecurityGroup:
-    Type: AWS::EC2::SecurityGroup
-    Properties:
-      GroupDescription: Security Group for Web Servers
-      VpcId: !Ref csye6225VPC
-      SecurityGroupIngress:
-      - IpProtocol: tcp
-        FromPort: 3306
-        ToPort: 3306
-        CidrIp: 0.0.0.0/0
-      Tags:
-      - Key: Name
-        Value: DBSecurityGroup
+  # DBSecurityGroup:
+  #   Type: AWS::EC2::SecurityGroup
+  #   Properties:
+  #     GroupDescription: Security Group for Web Servers
+  #     VpcId:
+  #     - Fn::GetAZs: !Ref csye6225VPC
+  #     SecurityGroupIngress:
+  #     - IpProtocol: tcp
+  #       FromPort: 3306
+  #       ToPort: 3306
+  #       CidrIp: 0.0.0.0/0
+  #     Tags:
+  #     - Key: Name
+  #       Value: DBSecurityGroup
   
   # csye6225: 
   #   Type: AWS::DynamoDB::Table
@@ -80,35 +81,32 @@ Resources:
   #       WriteCapacityUnits: "5"
   #     TableName: "csye6225"
 # RDS Subnet Group
-    rdsSubnetGroup: 
-    Type: "AWS::RDS::DBSubnetGroup"
-    Properties: 
-      DBSubnetGroupDescription: "RDS Subnets"
-      SubnetIds: 
-        - Fn::ImportValue:
-            !Sub ${AWS::StackName}-Public-A
-        - Fn::ImportValue:
-            !Sub ${AWS::StackName}-Public-B
-        - Fn::ImportValue:
-            !Sub ${AWS::StackName}-Public-C
+  # rdsSubnetGroup: 
+  #   Type: "AWS::RDS::DBSubnetGroup"
+  #   Properties: 
+  #     DBSubnetGroupDescription: "RDS Subnets"
+  #     SubnetIds:
+  #       - Fn::ImportValue:
+  #           !Ref PublicSubnetA
+  #       - Fn::ImportValue:
+  #           !Ref PublicSubnetA
+  #       - Fn::ImportValue:
+  #           !Ref PublicSubnetA
 
 #RDS Instance
-    MyDB:
-      Type: AWS::RDS::DBInstance
-      Properties:
-        Engine: MySQL
-        DBInstanceClass:
-          Ref: db.t2.medium
-        MultiAZ: false
-        DBInstanceIdentifier:
-          Ref: csye6225-spring2019
-        MasterUsername:
-          Ref: csye6225master
-        MasterUserPassword:
-          Ref: csye6225password
-        PubliclyAccessible: true
-        DBSubnetGroupName:
-          Ref: rdsSubnetGroup
-        DBName: csye6225
-        DBSecurityGroups: 
-          Ref: DBSecurityGroup
+  MyDB:
+    Type: AWS::RDS::DBInstance
+    Properties:
+      AllocatedStorage: 20
+      Engine: MySQL
+      DBInstanceClass: db.t2.medium
+      MultiAZ: false
+      DBInstanceIdentifier: csye6225-spring2019
+      MasterUsername: csye6225master
+      MasterUserPassword: csye6225password
+      PubliclyAccessible: true
+      DBSubnetGroupName:
+        Ref: rdsSubnetGroup
+      DBName: csye6225
+      # DBSecurityGroups: 
+      #   Ref: DBSecurityGroup
