--- a/webapp/src/main/resources/application.properties
+++ b/webapp/src/main/resources/application.properties
@@ -14,7 +14,7 @@ csye6225.save.file.type=local
 
 csye6225.file.folder=file
 
-csye6225.aws.url.suffix=.s3.amazonaws.com
+csye6225.aws.url.suffix=s3.amazonaws.com
 
 
 spring.servlet.multipart.max-file-size=100MB
