--- a/infrastructure/aws/cloudformation/csye6225-cf-networking.yaml
+++ b/infrastructure/aws/cloudformation/csye6225-cf-networking.yaml
@@ -5,8 +5,8 @@ Resources:
     Type: AWS::EC2::VPC
     Properties:
       CidrBlock: 10.0.0.0/16
-      EnableDnsSupport: false
-      EnableDnsHostnames: false
+      EnableDnsSupport: true
+      EnableDnsHostnames: true
       Tags:
       - Key: Name
         Value:  !Join ['', [!Ref "AWS::StackName", "-csye6225","-vpc" ]]
