--- a/infrastructure/aws/cloudformation/csye6225-cf-application.yaml
+++ b/infrastructure/aws/cloudformation/csye6225-cf-application.yaml
@@ -1,21 +1,11 @@
 AWSTemplateFormatVersion: "2010-09-09"
 Resources: 
-  # #Create VPC:
-  # csye6225VPC:
-  #   Type: AWS::EC2::VPC
-  #   Properties:
-  #     CidrBlock: 10.0.0.0/16
-  #     EnableDnsSupport: false
-  #     EnableDnsHostnames: false
-  #     Tags:
-  #     - Key: Name
-  #       Value:  !Join ['', [!Ref "AWS::StackName", "-csye6225","-vpc" ]]
 
   # WebappSecurityGroup:
   #   Type: AWS::EC2::SecurityGroup
   #   Properties:
   #     GroupDescription: Security Group for Web Servers
-  #     VpcId: !Ref csye6225VPC
+  #     VpcId: !ImportValue vpcId-1
   #     SecurityGroupIngress:
   #     - IpProtocol: tcp
   #       FromPort: 22
@@ -50,36 +40,39 @@ Resources:
   #           VolumeSize: 20
   #     ImageId: ami-9887c6e7
 
-  # DBSecurityGroup:
-  #   Type: AWS::EC2::SecurityGroup
-  #   Properties:
-  #     GroupDescription: Security Group for Web Servers
-  #     VpcId: !ImportValue vpcId-1
-  #     SecurityGroupIngress:
-  #     - IpProtocol: tcp
-  #       FromPort: "3306"
-  #       ToPort: "3306"
-  #       CidrIp: 0.0.0.0/0
-  #     Tags:
-  #     - Key: Name
-  #       Value: DBSecurityGroup
+# Create DynamoDB
+  dynamoDB: 
+    Type: AWS::DynamoDB::Table
+    Properties: 
+      AttributeDefinitions: 
+        - 
+          AttributeName: "id"
+          AttributeType: "S"
+      KeySchema: 
+        - 
+          AttributeName: "id"
+          KeyType: "HASH"
+      ProvisionedThroughput: 
+        ReadCapacityUnits: "5"
+        WriteCapacityUnits: "5"
+      TableName: "csye6225"
+      
+# Setup DBSecurity Group
+  rdsDBSecurityGroup:
+    Type: AWS::EC2::SecurityGroup
+    Properties:
+      GroupDescription: Security Group for Web Servers
+      VpcId: !ImportValue vpcId-1
+      SecurityGroupIngress:
+      - IpProtocol: tcp
+        FromPort: "3306"
+        ToPort: "3306"
+        CidrIp: 0.0.0.0/0
+      Tags:
+      - Key: Name
+        Value: !Sub ${AWS::StackName}-csye6225-rdsDBSecurityGroup
   
-  # dynamoDB: 
-  #   Type: AWS::DynamoDB::Table
-  #   Properties: 
-  #     AttributeDefinitions: 
-  #       - 
-  #         AttributeName: "id"
-  #         AttributeType: "S"
-  #     KeySchema: 
-  #       - 
-  #         AttributeName: "id"
-  #         KeyType: "HASH"
-  #     ProvisionedThroughput: 
-  #       ReadCapacityUnits: "5"
-  #       WriteCapacityUnits: "5"
-  #     TableName: "csye6225"
-# RDS Subnet Group
+# Setup RDS Subnet Group
   rdsSubnetGroup: 
     Type: "AWS::RDS::DBSubnetGroup"
     Properties: 
@@ -88,12 +81,16 @@ Resources:
         - !ImportValue PublicSubA
         - !ImportValue PublicSubB
         - !ImportValue PublicSubC
+      Tags:
+        - Key: Name
+          Value: !Sub ${AWS::StackName}-csye6225-rdsSubnetGroup
 
-#RDS Instance
+#Create RDS Instance
   rdsInstance:
     Type: AWS::RDS::DBInstance
     Properties:
       AllocatedStorage: 5
+      DBName: csye6225
       Engine: MySQL
       DBInstanceClass: db.t2.medium
       MultiAZ: false
@@ -102,6 +99,5 @@ Resources:
       MasterUserPassword: csye6225password
       PubliclyAccessible: true
       DBSubnetGroupName: !Ref rdsSubnetGroup
-      DBName: csye6225
-      # DBSecurityGroups: 
-      #   Ref: DBSecurityGroup
+      VPCSecurityGroups: 
+      - !GetAtt rdsDBSecurityGroup.GroupId
