--- a/infrastructure/aws/cloudformation/csye6225-cf-networking.yaml
+++ b/infrastructure/aws/cloudformation/csye6225-cf-networking.yaml
@@ -118,7 +118,6 @@ Outputs:
     Value: !Ref PublicSubnetC
     Export:
       Name: !Sub ${AWS::StackName}-SubC
-
+      
   StackName:
-    Description: Stack Name
-    Value: !Sub ${AWS::StackName}-StackName
+    Value: !Ref AWS::StackName
