--- a/webapp/src/main/resources/application-dev.properties
+++ b/webapp/src/main/resources/application-dev.properties
@@ -1,6 +1,7 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/csye6225
-spring.datasource.username=root
-spring.datasource.password=00000000
+#spring.datasource.url=jdbc:mysql://localhost:3306/csye6225
+spring.datasource.url=jdbc:mysql://csye6225-spring2019.cznyz0wjytd7.us-east-1.rds.amazonaws.com:3306/csye6225
+spring.datasource.username=csye6225master
+spring.datasource.password=csye6225password
 
 spring.jackson.date-format=yyyy-MM-dd:HH:mm:ss
 spring.jackson.time-zone=GMT-5
