--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,9 @@
 version: 2
 jobs:
   build:
+    branches:
+      only:
+       - Mybranch
     docker:
       - image: circleci/python:2.7-jessie
     steps:
