--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
   build:
     branches:
       only:
-       - Mybranch
+       - Assignment5
     docker:
       - image: circleci/python:2.7-jessie
     steps:
