--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,4 @@ jobs:
       - run:
           name: Build AMI
           command: |
-            ./packer build \
-            -var "aws_region=${AWS_REGION}" \
-            -var "subnet_id=${AWS_SUBNET_ID}" \
-            centos-ami-template.json
+            ./packer build centos-ami-template.json
