--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,5 +28,5 @@ jobs:
           command: |
             ./packer build \
             -var "aws_region=${AWS_DEFAULT_REGION}" \
+            -var 'subnet_id=${SUBNET_ID}' \
             centos-ami-template.json
-            
